task-2-kubernetes/policy/3_rejected_Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rejected-no-resources
  namespace: shop
spec:
  containers:
    - name: nginx
      image: nginx:1.27-alpine
