task-2-kubernetes/policy/2_require-requests-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredRequestsLimits
metadata:
  name: require-container-requests-limits
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet", "ReplicaSet"]
      - apiGroups: ["batch"]
        kinds: ["Job", "CronJob"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - ingress-nginx
